tests/suite/snapshots/suite__check__tests__check__bad-pa3-4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-pa3-4.xi:2:5]
   │
 2 │     b:bool = x + 47
   ·     ───┬──  
   ·        ╰──── Expected bool but found int
───╯

